[gd_scene load_steps=2 format=3 uid="uid://c6odqg6a2357w"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_ayjjb"]

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ayjjb")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -183.0
offset_top = 83.0
offset_right = 184.0
offset_bottom = 238.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "You died!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -98.0
offset_right = 201.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Restart"

[node name="Return To Title Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = 166.0
offset_right = 194.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Return To Title
"

[node name="Back Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = 50.0
offset_right = 197.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Watch"

[connection signal="pressed" from="Restart Button" to="." method="_on_start_button_pressed" binds= ["restart"]]
[connection signal="pressed" from="Return To Title Button" to="." method="_on_return_to_title_button_pressed"]
[connection signal="pressed" from="Back Button" to="." method="_on_back_button_pressed"]
