[gd_scene load_steps=2 format=3 uid="uid://baekuelowkltt"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_y3k26"]

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y3k26")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.364706)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -191.0
offset_top = 96.0
offset_right = 176.0
offset_bottom = 251.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -421.0
offset_top = 64.0
offset_right = -21.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Restart"

[node name="Return To Title Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = 190.0
offset_right = 195.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Return To Title"

[node name="Settings Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 7.0
offset_top = 68.0
offset_right = 407.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Settings"

[connection signal="pressed" from="Restart Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Return To Title Button" to="." method="_on_return_to_title_button_pressed"]
[connection signal="pressed" from="Settings Button" to="." method="_on_settings_button_pressed"]
